--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ body {
 
 .button {
   padding: 6px 20px;
+  margin-bottom: 15px;
   display: inline-block;
   vertical-align: baseline;
   text-decoration: none;
